--- a/week-06/day-3/SignUpForm/style.css
+++ b/week-06/day-3/SignUpForm/style.css
@@ -20,56 +20,74 @@ body{
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 400px;
+    height: 450px;
 }
 
 
 .third-sized{
     width: 45%;
     font-size: 22px;
-    /*border: 1px solid black;*/
 }
 
 .second-sized{
     width: 10%;
     font-size: 22px;
+    justify-content: center;
 }
 
 .block1 {
-    padding: 20px;
+    padding: 0 20px;
     text-align: left;
 }
 
 .block2 {
     align-items: center;
+    justify-content: center;
 }
 
-
-.inputs {
-    width: 100%;
+h2{
+    font-weight: lighter;
+    color: #535756;
+    margin: 20px 0 5px 0;
+    font-size: 42px;
 }
 
 input[type='text'], input[type='email'], input[type='password']{
     width: 100%;
-    font-size: 22px;
-    margin: 5px 0;
+    font-size: 20px;
+    margin: 10px 0;
     border: none;
-    border-bottom: 2px solid rgb(171,171,171);
-    padding: 3px;
+    border-bottom: 1px solid rgb(171,171,171);
+    padding: 15px 3px 3px 3px ;
+    font-weight: lighter;
 }
 
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
-    border-bottom: 3px solid green;
+    border-bottom: 1px solid green;
 }
 
-
+.submit {
+    margin: 50px 0;
+    width: 120px;
+    padding: 10px 5px;
+    text-align: center;
+    color: white;
+    background-color: rgb(22, 160, 133);
+    border: none;
+    border-radius: 2px;
+    font-weight: bold;
+    font-size: 14px;
+}
 
 .button {
-    padding: 20px;
-    border-radius: 60px;
+    padding: 10px;
+    border-radius: 100px;
     background-color: rgb(221, 221, 221);
-    box-shadow: 0px 3px rgb(187, 187, 187);
+    box-shadow: 0px 2px rgb(187, 187, 187);
+    font-weight: lighter;
+    margin: 12px;
+    color:  grey;
+    font-size: 20px;
 }
 
 .social{
@@ -78,7 +96,7 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
 }
 
 .bar{
-    padding: 10px 40px;
+    padding: 10px 60px;
     border-radius: 2px;
 
 }
