--- a/week-06/day-4/src/main/resources/templates/index.html
+++ b/week-06/day-4/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
         <a href="/most-expensive" class="end button">most expensive available</a>
       </div>
     </header>
-    <form class="searchbar">
+    <form class="searchbar" method="POST" action="http://localhost:8080/search">
       <div id="subtitel">
         <p>Search for:</p>
       </div>
