--- a/week-06/day-4/src/main/resources/templates/average.html
+++ b/week-06/day-4/src/main/resources/templates/average.html
@@ -8,7 +8,12 @@
 <body>
 <div class="content">
   <header class="top">
-    <a href="http://localhost:8080"><h1>My Shop</h1></a>
+    <div class="header">
+      <a href="http://localhost:8080/webshop"><h1 class="myShopButton">My Shop</h1></a>
+      <div class="more">
+        <a href="http://localhost:8080/more-filters"><h1 class="moreButton">More>></h1></a>
+      </div>
+    </div>
     <div class="links">
       <a href="/only-available" class="start button">only available</a>
       <a href="/cheapest-first" class="button">cheapest first</a>
