feature(Login Page): done

--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
     <li><a href="#">Information</a></li>
   </ul>
   <img src="greenfox.png">
-  <p>This is Mr. Fox. Currently living on pizza and lemonade. He knows 2 tricks.</p>
+  <p th:text="'This is ' + ${name} + '. Currently living on pizza and lemonade. He knows 2 tricks.'"></p>
   <h1>Known tricks</h1>
   <ul>
     <li>write HTML</li>
