Features(Nutrition Store) Select optiones

--- a/week-07/day-4/src/main/resources/templates/index.html
+++ b/week-07/day-4/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 <body>
   <ul>
     <li><a href="#">Information</a></li>
+    <li><a th:href="'/nutritionStore?name=' + ${fox.getName()}">Nutrition Store</a></li>
+
   </ul>
   <img src="greenfox.png">
   <p th:text="'This is ' + ${fox.getName()} + '. Currently living on '
