--- a/week-07/day-4/src/main/resources/templates/login.html
+++ b/week-07/day-4/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <title>My Shop</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" href="/styles.css" />
+<!--  <link rel="stylesheet" href="/styles.css" />-->
 </head>
 <body>
   <h1>Welcome to Programmer Fox Club!</h1>
