--- a/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
+++ b/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>My Shop</title>
+  <title>My ToDo's</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 <h1>Todos for today:</h1>
-<ul>
-  <li th:each="todo : ${todos}" th:text="${todo.getTitle()}"></li>
-</ul>
+<table>
+  <tr>
+    <th>ID</th>
+    <th>ACTION</th>
+    <th>DONE</th>
+    <th>URGENT</th>
+  </tr>
+  <tr th:each="todo : ${todos}">
+    <td th:text="${todo.getId()}"></td>
+    <td th:text="${todo.getTitle()}"></td>
+    <td th:text="${todo.isDone()}"></td>
+    <td th:text="${todo.isUrgent()}"></td>
+  </tr>
+</table>
 </body>
 </html>
