--- a/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
+++ b/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Todos for today:</h1>
+<a href="http://localhost:8080/todo/add">Add new todo</a>
 <table>
   <tr>
     <th>ID</th>
