--- a/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
+++ b/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
@@ -19,6 +19,7 @@
     <td th:text="${todo.getTitle()}"></td>
     <td th:text="${todo.isDone()}"></td>
     <td th:text="${todo.isUrgent()}"></td>
+    <td><a th:href="'/todo/' + ${todo.getId()} + '/delete'">delete</a></td>
   </tr>
 </table>
 </body>
