--- a/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/addtodo.html
+++ b/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/addtodo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>My Shop</title>
+  <title>My ToDo's</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <!--  <link rel="stylesheet" href="/styles.css" />-->
 </head>
@@ -10,7 +10,6 @@
   <form method="post" action="http://localhost:8080/todo/add" th:object="${todo}">
     <input type="text" name="add" th:field="*{title}">
     <input type="submit" name="addbutton" value="Sumbit">
-
   </form>
 </body>
 </html>
