--- a/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
+++ b/week-08/day-4/ConnectionWithMySQL/src/main/resources/templates/todolist.html
@@ -20,6 +20,7 @@
     <td th:text="${todo.isDone()}"></td>
     <td th:text="${todo.isUrgent()}"></td>
     <td><a th:href="'/todo/' + ${todo.getId()} + '/delete'">delete</a></td>
+    <td><a th:href="'/todo/' + ${todo.getId()} + '/edit'">edit</a></td>
   </tr>
 </table>
 </body>
